# hecktor2021-task1

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  crop_and_resample.py  ensemble.py  infer.py  pyproject.toml  train.py
hecktor2021/: backbone.py  evaluation.py  get_train_val_sites.py  hecktor_data.py  hecktor_task.py
hecktor2021/data/: __init__.py  bounding_boxes.csv  get_original_resolution.py  get_resample_back.py  original_resolution_ct.csv  resample.py  resampling.py
hecktor2021/models/: dyn_unet.py
hecktor2021/postprocessing/: brain_segmentation.py  resample_for_submission.py  surface_distance.py
splits/: dataset_0.json  dataset_1.json  dataset_2.json  dataset_3.json  dataset_4.json
